name:                lambda-calculus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lambda-calculus#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable lambda-calculus
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, lambda-calculus

test-suite lambda-calculus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, lambda-calculus, hspec == 2.*
  other-modules:       LibSpec
  default-language:    Haskell2010
